--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
                             <h3>DEFINICIÓN</h3>
-                            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                            <p class="lead mb-0">Las Tecnologías de la Información y la Comunicación (TIC) son el conjunto de herramientas utilizadas en el tratamiento y transmisión de información de forma rápida y eficaz a un gran número de personas, independientemente de la distancia que les separe.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
