--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>DESARROLLO DE LAS TIC</h2>
-                        <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+                        <p class="lead mb-0">A lo largo del siglo XX los investigadores y científicos se preocuparon por llevar a cabo innumerables desarrollos tecnológicos en diversas áreas como la ingeniería, la medicina, la mecánica automotriz, la ingeniería espacial, las comunicaciones y sus redes, el internet, dispositivos móviles, entre muchos otros.</p>
                     </div>
                 </div>
                 <div class="row g-0">
