--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                     <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>PRINCIPALES CARACTERÍSTICAS DE LAS TIC</h2>
-                        <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 5!</p>
+                        <p class="lead mb-0">•	La interconexión y la capacidad de que varias tecnologías puedan funcionar en conjunto para propiciar nuevas herramientas de comunicación.
+•	Se encuentran en constante cambio e innovación debido a su desarrollo indetenible y la búsqueda de ofrecer mayor alcance comunicacional y de transmisión de la información.
+</p>
                     </div>
                 </div>
                 <div class="row g-0">
