--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>¿CÓMO INTEGRAR LAS TIC EN EL SALÓN DE CLASES? </h2>
-                        <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+                        <p class="lead mb-0"> A la hora de introducir las TIC en el aula lo primero que debe tener en mente un docente es la finalidad educativa del proceso, es decir lo que van a aprender los alumnos y cómo lo van a aprender. Teniendo esto claro es cuando se pueden introducir las medidas que se consideren oportunas.</p>
                     </div>
                 </div>
             </div>
