--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
                             <h5>TICS NIVEL INICIAL </h5>
-                            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                            <p class="font-weight-light mb-0">En la educación inicial las TIC son una herramienta pedagógica muy importante ya que ayudan a que los niños y niñas se familiaricen con la tecnología y permiten dinamizar e innovar en el proceso de enseñanza aprendizaje por medio de clases interactivas</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
