--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
                             <h5>TICS NIVEL UNIVERSITARIO</h5>
-                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                            <p class="font-weight-light mb-0">Funciones todas ellas que ven modificadas sus dimensiones y reglas de
+actuación con un nuevo rol del profesor y del alumno, nuevas estrategias
+didácticas, con la desaparición de las realidades espacio-temporales, etc. </p>
                         </div>
                     </div>
                 </div>
