--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/vivi.jpg" alt="..." />
                             <h5>TICS NIVEL PRIMARIA</h5>
                             <p class="font-weight-light mb-0">Las Tecnologías de la Información y la Comunicación (TIC) son el conjunto de herramientas utilizadas en el tratamiento y transmisión de información de forma rápida y eficaz a un gran número de personas, independientemente de la distancia que les separe.</p>
                         </div>
