--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/images(1).jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/HELLO.jpg" alt="..." />
                             <h5>TICS NIVEL INICIAL </h5>
                             <p class="font-weight-light mb-0">En la educación inicial las TIC son una herramienta pedagógica muy importante ya que ayudan a que los niños y niñas se familiaricen con la tecnología y permiten dinamizar e innovar en el proceso de enseñanza aprendizaje por medio de clases interactivas</p>
                         </div>
