--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/1.TICS.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/Hola.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>DESARROLLO DE LAS TIC</h2>
                         <p class="lead mb-0">A lo largo del siglo XX los investigadores y científicos se preocuparon por llevar a cabo innumerables desarrollos tecnológicos en diversas áreas como la ingeniería, la medicina, la mecánica automotriz, la ingeniería espacial, las comunicaciones y sus redes, el internet, dispositivos móviles, entre muchos otros.</p>
